<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/txvName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txvName"/>
        <EditText
            android:id="@+id/edtName"
            android:layout_height="match_parent"
            android:layout_width="match_parent"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/txvDescripcion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txvDescription"/>
        <EditText
            android:id="@+id/edtDescription"
            android:layout_height="match_parent"
            android:layout_width="match_parent"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/txvCreationDay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txvCreationDay"/>
        <EditText
            android:id="@+id/edtCreationDay"
            android:layout_height="match_parent"
            android:layout_width="match_parent"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_span="2"
            android:layout_gravity="center">
        <Button
            android:id="@+id/btnChange"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/btnChange"/>
        </LinearLayout>

    </TableRow>

</TableLayout>